--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ h2 {
     cursor: pointer;
     background-color: rgb(6, 224, 224);
     box-shadow: 0.15em 0.15em 0.15em rgb(5, 5, 5);
+    transform: scaleX(1.1)
 }
 
 .choice-img {
@@ -120,4 +121,53 @@ img{
     width: 50px;
     opacity: 1.2;
     display: inline-block;
+}
+#choice-icon {
+    -webkit-animation: color-change 1s infinite;
+    -moz-animation: color-change 1s infinite;
+    -o-animation: color-change 1s infinite;
+    -ms-animation: color-change 1s infinite;
+    animation: color-change 1s infinite;
+}
+
+
+@-webkit-keyframes color-change {
+    0% { color: rgb(236, 181, 181); }
+    50% { color: rgb(151, 151, 250); }
+    100% { color: red; }
+}
+@-moz-keyframes color-change {
+    0% { color: rgb(236, 181, 181); }
+    50% { color: rgb(151, 151, 250); }
+    100% { color: white; }
+}
+@-ms-keyframes color-change {
+    0% { color: rgb(236, 181, 181); }
+    50% { color: rgb(151, 151, 250); }
+    100% { color: white; }
+}
+@-o-keyframes color-change {
+    0% { color: rgb(236, 181, 181); }
+    50% { color: rgb(151, 151, 250); }
+    100% { color: white; }
+}
+@keyframes color-change {
+    0% { color: rgb(236, 181, 181); }
+    50% { color: rgb(151, 151, 250); }
+    100% { color: white; }
+}
+
+button {
+    width: 100px;
+    height: 30px;
+    background: aqua;
+}
+
+button:hover {
+    background: rgb(245, 106, 106);
+}
+
+#button {
+    text-align: center;
+    margin-top: 50px;
 }
